# simple_plugin

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/app/: CMakeLists.txt  main.cpp
examples/plugin1/: CMakeLists.txt  plugin1.cpp
examples/plugin2/: CMakeLists.txt  plugin1.cpp  plugin2.cpp
examples/plugin_interface/: CMakeLists.txt  plugin1.hpp  plugin2.hpp
plugin/: CMakeLists.txt  plugin.hpp  plugin_creator.hpp  plugin_mgr.hpp  symbol_visibility.hpp
plugin_mgr_impl/: CMakeLists.txt  dylib.hpp  plugin_mgr_api_impl.cpp  plugin_mgr_impl.cpp  plugin_mgr_impl.hpp
